assets/css/screen.css
/*

This is a development CSS file which is compiled to a minified
production stylesheet in assets/built/screen.css using: gulp dev

*/

/* Lib - Local component imports
/* ---------------------------------------------------------- */

/* Base components */
@import "vars.css";
@import "components/global.css";
@import "components/forms.css";
@import "components/buttons.css";

/* Ghost components */
@import "ghost/header.css";
@import "ghost/content.css";
@import "ghost/readmore.css";
@import "ghost/members.css";
@import "ghost/errors.css";
@import "ghost/footer.css";
@import "ghost/badge.css";



/* Main - Your styles here! Edit below
/* ---------------------------------------------------------- */

html,
.gh-viewport {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background: #fff;
}

.gh-main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
}

.gh-page {
    padding: 0 4vmin;
    /* ? What happens when I add color here? */
    /* background-color: var(--surface-warm-02); */
}

.gh-article {
    padding: 8vmin 0;
}

.gh-postfeed {
    padding: 8vmin 0;
}

.gh-container {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

/* .gh-head-actions is social media crap */
.gh-head-actions a {
    display: inline-flex;
    align-items: center;
    margin: 0;
    padding: 10px;
}

.gh-head-actions a svg {
    height: 1.8rem;
    fill: currentcolor;
}

.gh-head-actions a:first-child svg {
    margin-left: 20px;
}

.gh-head-actions a:last-child svg {
    height: 2rem;
}

/* Index 
This is the 'home' page in the Starter theme.
/* ---------------------------------------------------------- */


/* Apply 8vmin top margin to to all cards that aren't first in the list */
.gh-card:not(:first-child) {
    margin: 8vmin auto 0;
}

.gh-card-link {
    display: flex;
    flex-direction: column;
    /* Adding in some more shit 2021.11.09 */
    overflow: hidden;
    position: relative;

}

.gh-card-image {
    /* width: 100%;*/
    /* height: 25vmax; */
    /* max-height: 75vmin;
    max-width: 30vmax;
    object-fit: contain; */
    margin-bottom: 4vmin;
    margin: auto;
}

.gh-card-meta {
    display: block;
    margin: var(--space-m) 0;
    font-size: var(--font-size-00);
    line-height: 1em;
    /* letter-spacing: 0.5px; */
    text-transform: uppercase;
    opacity: 0.8;
}

/* * Card content styling! */
/* * --------------------------------------------------------------------------------- */

.gh-card-content {
    margin: 0 4vmax;
    text-align: left;
    display: flex;
    flex-direction: column;
    
}
/* * --------------------------------------------------------------------------------- */


.gh-card-content p {
    /* margin: 1.2rem 0; */
    margin: var(--space-m) 0;
    /* padding: 0 4vmin; */
    /* padding: 0 var(--space-s); */
}

 .gh-card-content > strong {
    display: inline-block;
    padding: 1px 0;
    font-weight: 500;
    box-shadow: 0 -1px 0 0 inset currentColor;
    opacity: 0.5;
}

.gh-card-content p {
    font-family: var(--font-serif);
}


/* TODO This still needs to be changed to mobile-first settings */
@media (min-width: 600px) {
    .gh-card-link {
        display: flex;
        flex-direction: row;
        
    }

    .gh-card-image {
        /* max-height: 20vmin; */
        height: fit-content;
    }

    .gh-card-meta {
        margin: 0 0 var(--space-m);
    }

}


/* Page
/* ---------------------------------------------------------- */

.gh-page-head {
    margin: 0 auto;
    padding: 8vmin 0 4vmin;
    text-align: center;
}

.gh-page-image {
    margin: 4vmin 0 0 0;
}

.gh-page-head > p {
    max-width: 720px;
    margin: 0.3em auto 0;
    padding: 0 6vmin;
    font-size: 1.3em;
    line-height: 1.4em;
    opacity: 0.5;
}

@media (max-width: 700px) {
    .gh-page-head > p {
        font-size: 1.6rem;
    }

}

/* Tring out alternative css responsiveness
/* ---------------------------------------------------------- */
/* @media (min-width: 700px) {
    .gh-card-link {

    }

} */






/* Post
/* ---------------------------------------------------------- */

.gh-header {
    padding: 0 0 8vmin 0;
    text-align: center;
}

.gh-post-meta {
    display: block;
    margin: 0 0 1rem;
    font-size: 1.4rem;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    opacity: 0.8;
}

.gh-excerpt {
    margin: 1rem 0 0 0;
}

.gh-feature-image {
    grid-column: wide-start / wide-end;
    width: 100%;
    margin: 8vmin 0 0;
}

.gh-post-footer {
    margin: 2rem 0;
}


/* Author Archive
/* ---------------------------------------------------------- */

.gh-author-image {
    height: 12vmin;
    width: 12vmin;
    margin: 0 auto 1.5em;
    border-radius: 100%;
    overflow: hidden;
    object-fit: cover;
}

.gh-author-meta {
    margin: 2vmin 0 0 0;
    font-size: 1.2em;
}

.gh-author-links {
    display: flex;
    align-items: center;
    justify-content: center;
}

.gh-author-links a {
    position: relative;
    display: inline-flex;
    align-items: center;
    margin: 0 0.75vmin;
}

.gh-author-links a + a:before {
    display: block;
    content: "";
    margin: 0 1.25vmin 0 0;
    height: 1em;
    width: 1px;
    background: rgba(0,0,0,0.3);
    transform: rotate(20deg);
}

@media (max-width: 700px) {
    .gh-author-meta {
        font-size: 1.6rem;
    }
}

